--- a/pages/article-page.html
+++ b/pages/article-page.html
@@ -226,7 +226,7 @@
             <div class="my-container header__container">
                 <div class="header__desktop">
                     <div class="header__left">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="pre-mobile-menu header__pre-mobile-menu">
                             <div class="dropdown pre-mobile-menu__dropdown">
@@ -407,7 +407,7 @@
                 </div>
                 <div class="header__mobile --no-sectionsLinks">
                     <div class="header__mobile-top">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="header__buttons">
                             <a href="tel:+73952738200"
@@ -596,12 +596,12 @@
                             </div>
                         </div>
                         <div class="hero-section__wrap-img">
-                            <img src="../assets/images/pages/article-page/hero-section/block-img.png" alt=""
+                            <img loading="lazy" src="../assets/images/pages/article-page/hero-section/block-img.png" alt=""
                                 class="hero-section__img">
                         </div>
                     </div>
                 </div>
-                <img src="../assets/images/pages/main/background/cones-7.png" alt=""
+                <img loading="lazy" src="../assets/images/pages/main/background/cones-7.png" alt=""
                     class="hero-section__background-img">
             </section>
 
@@ -624,7 +624,7 @@
                 <div class="my-container image-text__container">
                     <div class="image-text__inner">
                         <div class="image-text__image-wrap">
-                            <img src="../assets/images/pages/article-page/image-text/block-img.png" alt="" class="image-text__image">
+                            <img loading="lazy" src="../assets/images/pages/article-page/image-text/block-img.png" alt="" class="image-text__image">
                         </div>
                         <div class="image-text__texts --middle-texts">
                             <p class="image-text__text">Данные принципы успешно реализуются посредством проектного подхода – исследовательская деятельность, основанная на интересе детей. Взрослый является наставником и партнером. И&nbsp;высшая задача взрослого верить в&nbsp;ребенка, дать возможность проявиться ребенку, его истинному интересу и&nbsp;помочь выразить себя разными способами. Проектная деятельность предусматривает работу в команде, где&nbsp;воспитываются основы демократии, ребенок учится выражать свое мнение и&nbsp;слышать других. Только в обществе ребенок и взрослый могут в полной мере проявить личную и социальную ответственность.</p>
@@ -705,7 +705,7 @@
                                     <div class="swiper-slide many-images__swiper-slide">
                                         <div class="many-images__slide">
                                             <div class="many-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/article-page/many-images/image-1.png"
+                                                <img loading="lazy" src="../assets/images/pages/article-page/many-images/image-1.png"
                                                     alt="" class="many-images__slide-img">
                                             </div>
                                         </div>
@@ -713,7 +713,7 @@
                                     <div class="swiper-slide many-images__swiper-slide">
                                         <div class="many-images__slide">
                                             <div class="many-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/article-page/many-images/image-2.png"
+                                                <img loading="lazy" src="../assets/images/pages/article-page/many-images/image-2.png"
                                                     alt="" class="many-images__slide-img">
                                             </div>
                                         </div>
@@ -721,7 +721,7 @@
                                     <div class="swiper-slide many-images__swiper-slide">
                                         <div class="many-images__slide">
                                             <div class="many-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/article-page/many-images/image-3.png"
+                                                <img loading="lazy" src="../assets/images/pages/article-page/many-images/image-3.png"
                                                     alt="" class="many-images__slide-img">
                                             </div>
                                         </div>
@@ -792,7 +792,7 @@
                                     <div class="swiper-slide quote__swiper-slide">
                                         <div class="quote__slide">
                                             <div class="quote__slide-img-wrap">
-                                                <img src="../assets/images/pages/article-page/quote/slide-1.png"
+                                                <img loading="lazy" src="../assets/images/pages/article-page/quote/slide-1.png"
                                                     alt="" class="quote__slide-img">
                                             </div>
                                         </div>
@@ -800,7 +800,7 @@
                                     <div class="swiper-slide quote__swiper-slide">
                                         <div class="quote__slide">
                                             <div class="quote__slide-img-wrap">
-                                                <img src="../assets/images/pages/article-page/quote/slide-2.png"
+                                                <img loading="lazy" src="../assets/images/pages/article-page/quote/slide-2.png"
                                                     alt="" class="quote__slide-img">
                                             </div>
                                         </div>
@@ -808,7 +808,7 @@
                                     <div class="swiper-slide quote__swiper-slide">
                                         <div class="quote__slide">
                                             <div class="quote__slide-img-wrap">
-                                                <img src="../assets/images/pages/article-page/quote/slide-3.png"
+                                                <img loading="lazy" src="../assets/images/pages/article-page/quote/slide-3.png"
                                                     alt="" class="quote__slide-img">
                                             </div>
                                         </div>
@@ -890,7 +890,7 @@
                     <div class="footer__left">
                         <div class="footer-left__top">
                             <a href="" class="footer__logo-link">
-                                <img src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
+                                <img loading="lazy" src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
                             </a>
                             <button class="my-button footer__button-reviews --reverseColors">оставить отзыв</button>
                         </div>
