--- a/pages/blog.html
+++ b/pages/blog.html
@@ -215,7 +215,7 @@
             <div class="my-container header__container">
                 <div class="header__desktop">
                     <div class="header__left">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="pre-mobile-menu header__pre-mobile-menu">
                             <div class="dropdown pre-mobile-menu__dropdown">
@@ -396,7 +396,7 @@
                 </div>
                 <div class="header__mobile --no-sectionsLinks">
                     <div class="header__mobile-top">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="header__buttons">
                             <a href="tel:+73952738200"
@@ -591,12 +591,12 @@
                             </div>
                         </div>
                         <div class="hero-section__wrap-img">
-                            <img src="../assets/images/pages/blog/hero-section/block-img.jpg" alt=""
+                            <img loading="lazy" src="../assets/images/pages/blog/hero-section/block-img.jpg" alt=""
                                 class="hero-section__img">
                         </div>
                     </div>
                 </div>
-                <img src="../assets/images/pages/main/background/cones-7.png" alt=""
+                <img loading="lazy" src="../assets/images/pages/main/background/cones-7.png" alt=""
                     class="hero-section__background-img">
             </section>
 
@@ -627,7 +627,7 @@
                     <div class="articles-list__items">
                         <div class="articles-list__item">
                             <a href="./article-page.html" class="article-list__item-inner">
-                                <img src="../assets/images/pages/blog/articles-list/article-img-1.jpg" alt=""
+                                <img loading="lazy" src="../assets/images/pages/blog/articles-list/article-img-1.jpg" alt=""
                                     class="articles-list__item-img">
                                 <div class="articles-list__item-content">
                                     <div class="my-button my-button_borderSquare articles-list__item-title">
@@ -647,7 +647,7 @@
                             </a>
                         </div>
                         <div class="articles-list__item --text-news">
-                            <img src="../assets/images/pages/blog/articles-list/article-img-1.jpg" alt=""
+                            <img loading="lazy" src="../assets/images/pages/blog/articles-list/article-img-1.jpg" alt=""
                                 class="articles-list__item-img">
                             <div class="articles-list__item-content">
                                 <div class="my-button my-button_borderSquare articles-list__item-title">занятия
@@ -665,7 +665,7 @@
                             </div>
                         </div>
                         <div class="articles-list__item --text-news_withImage">
-                            <img src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt=""
+                            <img loading="lazy" src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt=""
                                 class="articles-list__item-img">
                             <div class="articles-list__item-content">
                                 <div class="my-button my-button_borderSquare articles-list__item-title">пикник
@@ -684,7 +684,7 @@
                             </div>
                         </div>
                         <div class="articles-list__item">
-                            <img src="../assets/images/pages/blog/articles-list/article-img-4.jpg" alt=""
+                            <img loading="lazy" src="../assets/images/pages/blog/articles-list/article-img-4.jpg" alt=""
                                 class="articles-list__item-img">
                             <div class="articles-list__item-content">
                                 <div class="my-button my-button_borderSquare articles-list__item-title">
@@ -702,7 +702,7 @@
                             </div>
                         </div>
                         <div class="articles-list__item">
-                            <img src="../assets/images/pages/blog/articles-list/article-img-5.jpg" alt=""
+                            <img loading="lazy" src="../assets/images/pages/blog/articles-list/article-img-5.jpg" alt=""
                                 class="articles-list__item-img">
                             <div class="articles-list__item-content">
                                 <div class="my-button my-button_borderSquare articles-list__item-title">
@@ -720,7 +720,7 @@
                             </div>
                         </div>
                         <div class="articles-list__item">
-                            <img src="../assets/images/pages/blog/articles-list/article-img-3.jpg" alt=""
+                            <img loading="lazy" src="../assets/images/pages/blog/articles-list/article-img-3.jpg" alt=""
                                 class="articles-list__item-img">
                             <div class="articles-list__item-content">
                                 <div class="my-button my-button_borderSquare articles-list__item-title">о
@@ -852,7 +852,7 @@
                     <div class="footer__left">
                         <div class="footer-left__top">
                             <a href="" class="footer__logo-link">
-                                <img src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
+                                <img loading="lazy" src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
                             </a>
                             <button class="my-button footer__button-reviews --reverseColors">оставить отзыв</button>
                         </div>
