--- a/pages/news.html
+++ b/pages/news.html
@@ -215,7 +215,7 @@
             <div class="my-container header__container">
                 <div class="header__desktop">
                     <div class="header__left">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="pre-mobile-menu header__pre-mobile-menu">
                             <div class="dropdown pre-mobile-menu__dropdown">
@@ -396,7 +396,7 @@
                 </div>
                 <div class="header__mobile --no-sectionsLinks">
                     <div class="header__mobile-top">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="header__buttons">
                             <a href="tel:+73952738200"
@@ -590,12 +590,12 @@
                             </div>
                         </div>
                         <div class="hero-section__wrap-img">
-                            <img src="../assets/images/pages/about/hero-section/block-img.jpg" alt=""
+                            <img loading="lazy" loading="lazy" src="../assets/images/pages/about/hero-section/block-img.jpg" alt=""
                                 class="hero-section__img">
                         </div>
                     </div>
                 </div>
-                <img src="../assets/images/pages/main/background/cones-7.png" alt=""
+                <img loading="lazy" loading="lazy" src="../assets/images/pages/main/background/cones-7.png" alt=""
                     class="hero-section__background-img">
             </section>
 
@@ -628,7 +628,7 @@
                     <div class="news-list__items">
                         <div class="news-list__item --video-poster">
                             <a href="./news-page.html" class="news-list__item-inner">
-                                <img src="../assets/images/pages/news/news-list/news-list-img-1.jpg" alt=""
+                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-1.jpg" alt=""
                                     class="news-list__item-img">
                                 <div class="news-list__item-content">
                                     <div class="my-button my-button_borderSquare news-list__item-title">город
@@ -649,7 +649,7 @@
                         </div>
                         <div class="news-list__item">
                             <a href="./news-page.html" class="news-list__item-inner">
-                                <img src="../assets/images/pages/news/news-list/news-list-img-2.jpg" alt=""
+                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-2.jpg" alt=""
                                     class="news-list__item-img">
                                 <div class="news-list__item-content">
                                     <div class="my-button my-button_borderSquare news-list__item-title">занятия
@@ -670,7 +670,7 @@
                         </div>
                         <div class="news-list__item">
                             <a href="./news-page.html" class="news-list__item-inner">
-                                <img src="../assets/images/pages/news/news-list/news-list-img-3.jpg" alt=""
+                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-3.jpg" alt=""
                                     class="news-list__item-img">
                                 <div class="news-list__item-content">
                                     <div class="my-button my-button_borderSquare news-list__item-title">пикник на
@@ -691,7 +691,7 @@
                         </div>
                         <div class="news-list__item">
                             <a href="./news-page.html" class="news-list__item-inner">
-                                <img src="../assets/images/pages/news/news-list/news-list-img-4.jpg" alt=""
+                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-4.jpg" alt=""
                                     class="news-list__item-img">
                                 <div class="news-list__item-content">
                                     <div class="my-button my-button_borderSquare news-list__item-title">выставка
@@ -712,7 +712,7 @@
                         </div>
                         <div class="news-list__item">
                             <a href="./news-page.html" class="news-list__item-inner">
-                                <img src="../assets/images/pages/news/news-list/news-list-img-5.jpg" alt=""
+                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-5.jpg" alt=""
                                     class="news-list__item-img">
                                 <div class="news-list__item-content">
                                     <div class="my-button my-button_borderSquare news-list__item-title">час реджио
@@ -733,7 +733,7 @@
                         </div>
                         <div class="news-list__item">
                             <a href="./news-page.html" class="news-list__item-inner">
-                                <img src="../assets/images/pages/news/news-list/news-list-img-6.jpg" alt=""
+                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-6.jpg" alt=""
                                     class="news-list__item-img">
                                 <div class="news-list__item-content">
                                     <div class="my-button my-button_borderSquare news-list__item-title">выставка
@@ -753,7 +753,7 @@
                             </a>
                         </div>
                         <div class="news-list__item">
-                            <img src="../assets/images/pages/news/news-list/news-list-img-7.jpg" alt=""
+                            <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-7.jpg" alt=""
                                 class="news-list__item-img">
                             <div class="news-list__item-content">
                                 <div class="my-button my-button_borderSquare news-list__item-title">развивающие
@@ -772,7 +772,7 @@
                             </div>
                         </div>
                         <div class="news-list__item">
-                            <img src="../assets/images/pages/news/news-list/news-list-img-8.jpg" alt=""
+                            <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-8.jpg" alt=""
                                 class="news-list__item-img">
                             <div class="news-list__item-content">
                                 <div class="my-button my-button_borderSquare news-list__item-title">провокации на
@@ -792,7 +792,7 @@
                         </div>
                         <div class="news-list__item --text-news">
                             <a href="./news-page.html" class="news-list__item-inner">
-                                <img src="../assets/images/pages/news/news-list/news-list-img-7.jpg" alt=""
+                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news/news-list/news-list-img-7.jpg" alt=""
                                     class="news-list__item-img">
                                 <div class="news-list__item-content">
                                     <div class="my-button my-button_borderSquare news-list__item-title">провокации
@@ -925,7 +925,7 @@
                     <div class="footer__left">
                         <div class="footer-left__top">
                             <a href="" class="footer__logo-link">
-                                <img src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
+                                <img loading="lazy" loading="lazy" src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
                             </a>
                             <button class="my-button footer__button-reviews --reverseColors">оставить отзыв</button>
                         </div>
