--- a/pages/painting-education.html
+++ b/pages/painting-education.html
@@ -222,7 +222,7 @@
             <div class="my-container header__container">
                 <div class="header__desktop">
                     <div class="header__left">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="pre-mobile-menu header__pre-mobile-menu">
                             <div class="dropdown pre-mobile-menu__dropdown">
@@ -403,7 +403,7 @@
                 </div>
                 <div class="header__mobile --no-sectionsLinks">
                     <div class="header__mobile-top">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="header__buttons">
                             <a href="tel:+73952738200"
@@ -600,11 +600,11 @@
                             </div>
                         </div>
                         <div class="hero-section__wrap-img">
-                            <img src="../assets/images/pages/news/hero-section/block-img.jpg" alt="" class="hero-section__img">
+                            <img loading="lazy" src="../assets/images/pages/news/hero-section/block-img.jpg" alt="" class="hero-section__img">
                         </div>
                     </div>
                 </div>
-                <img src="../assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
+                <img loading="lazy" src="../assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
             
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
@@ -665,7 +665,7 @@
                                 <div class="swiper-slide simple-slider-section__swiper-slide">
                                     <div class="simple-slider-section__slide">
                                         <div class="simple-slider-section__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt=""
+                                            <img loading="lazy" src="../assets/images/no-photo.png" alt=""
                                                 class="simple-slider-section__slide-img">
                                         </div>
                                         <div class="simple-slider-section__slide-body">
@@ -677,7 +677,7 @@
                                 <div class="swiper-slide simple-slider-section__swiper-slide">
                                     <div class="simple-slider-section__slide">
                                         <div class="simple-slider-section__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt=""
+                                            <img loading="lazy" src="../assets/images/no-photo.png" alt=""
                                                 class="simple-slider-section__slide-img">
                                         </div>
                                         <div class="simple-slider-section__slide-body">
@@ -689,7 +689,7 @@
                                 <div class="swiper-slide simple-slider-section__swiper-slide">
                                     <div class="simple-slider-section__slide">
                                         <div class="simple-slider-section__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt=""
+                                            <img loading="lazy" src="../assets/images/no-photo.png" alt=""
                                                 class="simple-slider-section__slide-img">
                                         </div>
                                         <div class="simple-slider-section__slide-body">
@@ -701,7 +701,7 @@
                                 <div class="swiper-slide simple-slider-section__swiper-slide">
                                     <div class="simple-slider-section__slide">
                                         <div class="simple-slider-section__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt=""
+                                            <img loading="lazy" src="../assets/images/no-photo.png" alt=""
                                                 class="simple-slider-section__slide-img">
                                         </div>
                                         <div class="simple-slider-section__slide-body">
@@ -713,7 +713,7 @@
                                 <div class="swiper-slide simple-slider-section__swiper-slide">
                                     <div class="simple-slider-section__slide">
                                         <div class="simple-slider-section__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt=""
+                                            <img loading="lazy" src="../assets/images/no-photo.png" alt=""
                                                 class="simple-slider-section__slide-img">
                                         </div>
                                         <div class="simple-slider-section__slide-body">
@@ -736,11 +736,11 @@
                             <div class="lesson-structure__lesson-stage-info --textImage_visible">
                                     <div class="lesson-structure__lesson-stage-number">01</div>
                                     <div class="lesson-structure__lesson-stage-pre-title --preLarge-texts">Урок начинается с&nbsp;выбора темы</div>
-                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
+                                    <img loading="lazy" src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                         alt="" class="lesson-structure__lesson-stage-mini-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-image-wrap">
-                                <img src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
+                                <img loading="lazy" src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-texts --middle-texts">
                                 <p class="lesson-structure__lesson-stage-text">Педагог совместно с ребенком выбирает тему занятия: детям важно учиться изображать то, что им интересно. Это хорошо мотивирует на дальнейшее обучение</p>
@@ -750,11 +750,11 @@
                             <div class="lesson-structure__lesson-stage-info --textImage_visible">
                                     <div class="lesson-structure__lesson-stage-number">02</div>
                                     <div class="lesson-structure__lesson-stage-pre-title --preLarge-texts">Определяем технику, в&nbsp;которой будем работать</div>
-                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
+                                    <img loading="lazy" src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                         alt="" class="lesson-structure__lesson-stage-mini-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-image-wrap">
-                                <img src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
+                                <img loading="lazy" src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-texts --middle-texts">
                                 <p class="lesson-structure__lesson-stage-text">Согласно программе, определяем, в какой технике будем работать</p>
@@ -764,11 +764,11 @@
                             <div class="lesson-structure__lesson-stage-info --textImage_visible">
                                     <div class="lesson-structure__lesson-stage-number">03</div>
                                     <div class="lesson-structure__lesson-stage-pre-title --preLarge-texts">После чего дети выполняют набросок будущего рисунка</div>
-                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
+                                    <img loading="lazy" src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                         alt="" class="lesson-structure__lesson-stage-mini-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-image-wrap">
-                                <img src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
+                                <img loading="lazy" src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-texts --middle-texts">
                                 <p class="lesson-structure__lesson-stage-text">Набрасываем эскиз, обращая внимание на детали</p>
@@ -778,11 +778,11 @@
                             <div class="lesson-structure__lesson-stage-info --textImage_visible">
                                     <div class="lesson-structure__lesson-stage-number">04</div>
                                     <div class="lesson-structure__lesson-stage-pre-title --preLarge-texts">Оставшаяся часть урока посвящена работе с&nbsp;художественными инструментами</div>
-                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
+                                    <img loading="lazy" src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                         alt="" class="lesson-structure__lesson-stage-mini-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-image-wrap">
-                                <img src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
+                                <img loading="lazy" src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-texts --middle-texts">
                                 <p class="lesson-structure__lesson-stage-text">В завершение ребенок заканчивает картину при помощи кистей, красок, пастельных карандашей и&nbsp;т.д.</p>
@@ -836,7 +836,7 @@
                         <div class="swiper lesson-teacher__swiper">
                             <div class="swiper-wrapper lesson-teacher__swiper-wrapper">
                                 <div class="swiper-slide lesson-teacher__swiper-slide">
-                                    <div class="lesson-teacher__slide"><img src="../assets/images/no-photo.png" alt="" class="lesson-teacher__slide-img"></div>
+                                    <div class="lesson-teacher__slide"><img loading="lazy" src="../assets/images/no-photo.png" alt="" class="lesson-teacher__slide-img"></div>
                                 </div>
                             </div>
                         </div>
@@ -1029,7 +1029,7 @@
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/video-img-1.jpg"
+                                                        <img loading="lazy" src="../assets/images/pages/main/reviews/video-img-1.jpg"
                                                             alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
@@ -1041,7 +1041,7 @@
                                                 <a href="../assets/images/pages/main/reviews/video-2.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/video-img-2.jpg"
+                                                        <img loading="lazy" src="../assets/images/pages/main/reviews/video-img-2.jpg"
                                                             alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
@@ -1053,7 +1053,7 @@
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/video-img-3.jpg"
+                                                        <img loading="lazy" src="../assets/images/pages/main/reviews/video-img-3.jpg"
                                                             alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
@@ -1065,7 +1065,7 @@
                                                 <a href="../assets/images/pages/main/reviews/video-2.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/video-img-1.jpg"
+                                                        <img loading="lazy" src="../assets/images/pages/main/reviews/video-img-1.jpg"
                                                             alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
@@ -1077,7 +1077,7 @@
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/video-img-1.jpg"
+                                                        <img loading="lazy" src="../assets/images/pages/main/reviews/video-img-1.jpg"
                                                             alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
@@ -1090,7 +1090,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="../assets/images/pages/main/background/cones.png" alt="" class="reviews__background-img">
+                <img loading="lazy" src="../assets/images/pages/main/background/cones.png" alt="" class="reviews__background-img">
             </section>
             
             <!-- ЕСЛИ feedback-block НАХОДИТЬСЯ ВНЕ КАКОЙ-ЛИБО СЕКЦИИ, ТО НАДО ЕГО ОБЕРНУТЬ ВНУТРЬ БЛОКА feedback, ЕСЛИ ОН ЧАСТЬ СЕКЦИИ (КАК НА ГЛАВНОЙ), ТАМ СВОЯ УНИКАЛЬНАЯ ОБЁРТКА -->
@@ -1204,7 +1204,7 @@
                     <div class="footer__left">
                         <div class="footer-left__top">
                             <a href="" class="footer__logo-link">
-                                <img src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
+                                <img loading="lazy" src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
                             </a>
                             <button class="my-button footer__button-reviews --reverseColors">оставить отзыв</button>
                         </div>
