--- a/pages/news-page.html
+++ b/pages/news-page.html
@@ -226,7 +226,7 @@
             <div class="my-container header__container">
                 <div class="header__desktop">
                     <div class="header__left">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="pre-mobile-menu header__pre-mobile-menu">
                             <div class="dropdown pre-mobile-menu__dropdown">
@@ -407,7 +407,7 @@
                 </div>
                 <div class="header__mobile --no-sectionsLinks">
                     <div class="header__mobile-top">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
+                        <a href="../index.html" class="header__logo-link"><img loading="lazy" loading="lazy" src="../assets/images/logo.svg"
                                 alt="logo" class="header__logo-img"></a>
                         <div class="header__buttons">
                             <a href="tel:+73952738200"
@@ -581,7 +581,7 @@
                             <div class="hero-section__text --middle-texts">Реджио-подход зародился в небольшом городке Реджио Эмилия на севере Италии. Основатель и вдохновитель идей «100 языков ребенка» является Лорис Малагуцци. Ис&nbsp;уже на протяжении более 50 лет педагоги разных стран</div>
                         </div>
                         <div class="hero-section__desc-img-wrap">
-                            <img src="../assets/images/pages/news-page/hero-section/image-2.jpg" alt="" class="hero-section__desc-img">
+                            <img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/hero-section/image-2.jpg" alt="" class="hero-section__desc-img">
                         </div>
                     </div>
                     <div class="hero-section__right-content">
@@ -599,12 +599,12 @@
                             </div>
                         </div>
                         <div class="hero-section__wrap-img">
-                            <img src="../assets/images/pages/news-page/hero-section/block-img.jpg" alt=""
+                            <img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/hero-section/block-img.jpg" alt=""
                                 class="hero-section__img">
                         </div>
                     </div>
                 </div>
-                <img src="../assets/images/pages/main/background/cones-7.png" alt=""
+                <img loading="lazy" loading="lazy" src="../assets/images/pages/main/background/cones-7.png" alt=""
                     class="hero-section__background-img">
             </section>
 
@@ -664,17 +664,17 @@
                                 <div class="swiper news-info__swiper">
                                     <div class="swiper-wrapper news-info__swiper-wrapper">
                                         <div class="swiper-slide news-info__swiper-slide">
-                                            <div class="news-info__slide"><img
+                                            <div class="news-info__slide"><img loading="lazy" loading="lazy"
                                                     src="../assets/images/pages//news-page/news-info/slide-1.jpg" alt=""
                                                     class="news-info__slide-img"></div>
                                         </div>
                                         <div class="swiper-slide news-info__swiper-slide">
-                                            <div class="news-info__slide"><img
+                                            <div class="news-info__slide"><img loading="lazy" loading="lazy"
                                                     src="../assets/images/pages//news-page/news-info/slide-2.jpg" alt=""
                                                     class="news-info__slide-img"></div>
                                         </div>
                                         <div class="swiper-slide news-info__swiper-slide">
-                                            <div class="news-info__slide"><img
+                                            <div class="news-info__slide"><img loading="lazy" loading="lazy"
                                                     src="../assets/images/pages//news-page/news-info/slide-3.jpg" alt=""
                                                     class="news-info__slide-img"></div>
                                         </div>
@@ -733,7 +733,7 @@
                                     <div class="swiper-slide big-images__swiper-slide">
                                         <div class="big-images__slide">
                                             <div class="big-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/news-page/big-images/slide-1.jpg" alt=""
+                                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/big-images/slide-1.jpg" alt=""
                                                     class="big-images__slide-img">
                                             </div>
                                         </div>
@@ -741,7 +741,7 @@
                                     <div class="swiper-slide big-images__swiper-slide">
                                         <div class="big-images__slide">
                                             <div class="big-images__slide-img-wrap --video-poster">
-                                                <img src="../assets/images/pages/news-page/big-images/slide-2.jpg" alt=""
+                                                <img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/big-images/slide-2.jpg" alt=""
                                                     class="big-images__slide-img">
                                             </div>
                                         </div>
@@ -756,19 +756,19 @@
             <section class="many-images">
                 <div class="my-container many-images__container">
                     <div class="many-images__content">
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-1.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-2.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item --video-poster"><img src="../assets/images/pages/news-page/many-images/image-3.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-4.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-5.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-6.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item --video-poster"><img src="../assets/images/pages/news-page/many-images/image-7.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-8.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-9.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-10.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-11.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item --video-poster"><img src="../assets/images/pages/news-page/many-images/image-12.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-13.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-1.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-2.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item --video-poster"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-3.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-4.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-5.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-6.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item --video-poster"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-7.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-8.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-9.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-10.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-11.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item --video-poster"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-12.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img loading="lazy" loading="lazy" src="../assets/images/pages/news-page/many-images/image-13.jpg" alt="" class="many-images__item-img"></div>
                     </div>
                 </div>
             </section>
@@ -843,7 +843,7 @@
                     <div class="footer__left">
                         <div class="footer-left__top">
                             <a href="" class="footer__logo-link">
-                                <img src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
+                                <img loading="lazy" loading="lazy" src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
                             </a>
                             <button class="my-button footer__button-reviews --reverseColors">оставить отзыв</button>
                         </div>
